--- a/src/main/java/com/criollo/machmillenium/vistas/usuario/UsuarioOperativo.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/usuario/UsuarioOperativo.form
@@ -5,7 +5,7 @@
       <xy x="20" y="20" width="829" height="522"/>
     </constraints>
     <properties>
-      <background color="-2719421"/>
+      <background color="-3158065"/>
       <enabled value="true"/>
       <opaque value="true"/>
       <preferredSize width="810" height="500"/>
@@ -18,7 +18,8 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <background color="-2719421"/>
+          <background color="-3158065"/>
+          <foreground color="-16315889"/>
           <minimumSize width="-1" height="-1"/>
           <preferredSize width="810" height="500"/>
           <requestFocusEnabled value="false"/>
@@ -123,24 +124,29 @@
                   <component id="4e375" class="javax.swing.JButton" binding="imprimir">
                     <constraints/>
                     <properties>
+                      <preferredSize width="140" height="30"/>
                       <text value="Imprimir registros"/>
                     </properties>
                   </component>
                   <component id="d6209" class="javax.swing.JButton" binding="verGráficosButton" default-binding="true">
                     <constraints/>
                     <properties>
+                      <preferredSize width="100" height="30"/>
                       <text value="Ver gráficos"/>
                     </properties>
                   </component>
                   <component id="4b312" class="javax.swing.JButton" binding="imprimirFacturaButton" default-binding="true">
                     <constraints/>
                     <properties>
+                      <preferredSize width="140" height="30"/>
                       <text value="Imprimir factura"/>
                     </properties>
                   </component>
                   <component id="1d3a1" class="javax.swing.JButton" binding="registrarPagoButton" default-binding="true">
                     <constraints/>
                     <properties>
+                      <opaque value="false"/>
+                      <preferredSize width="120" height="30"/>
                       <text value="Registrar pago"/>
                     </properties>
                   </component>
