--- a/src/main/java/com/criollo/machmillenium/vistas/Mach.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/Mach.form
@@ -12,7 +12,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <tabbedpane id="e5c8a" binding="tabbedPane">
+      <tabbedpane id="e5c8a" binding="panelTabs">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
