--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/AgregarPersonal.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/AgregarPersonal.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.personal.AgregarPersonal">
   <grid id="27dc6" binding="panel" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="757" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -12,7 +12,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <preferredSize width="119" height="30"/>
@@ -21,7 +21,7 @@
       <component id="8a667" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Nombre"/>
@@ -30,7 +30,7 @@
       <component id="a6e53" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Cédula de Identidad"/>
@@ -39,7 +39,7 @@
       <component id="e3b6f" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Correo electrónico"/>
@@ -48,7 +48,7 @@
       <component id="984" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="¿Es fijo?"/>
@@ -57,7 +57,7 @@
       <component id="35094" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Fecha de fin de contrato"/>
@@ -66,7 +66,7 @@
       <component id="869de" class="javax.swing.JLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Especialidad"/>
@@ -75,7 +75,7 @@
       <component id="1a0dd" class="javax.swing.JLabel">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="10" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Rol"/>
@@ -84,7 +84,7 @@
       <grid id="d2a33" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -97,16 +97,19 @@
               <text value="Si"/>
             </properties>
           </component>
-          <hspacer id="da6b8">
+          <hspacer id="dce4c">
             <constraints/>
           </hspacer>
-          <hspacer id="dce4c">
+          <hspacer id="55da3">
+            <constraints/>
+          </hspacer>
+          <hspacer id="c7f86">
             <constraints/>
           </hspacer>
           <component id="e41d" class="javax.swing.JRadioButton" binding="noRadioButton" default-binding="true">
             <constraints/>
             <properties>
-              <preferredSize width="41" height="21"/>
+              <preferredSize width="50" height="21"/>
               <text value="No"/>
             </properties>
           </component>
@@ -115,7 +118,7 @@
       <component id="4f5dc" class="javax.swing.JComboBox" binding="comboboxRol" custom-create="true">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -146,7 +149,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -155,7 +158,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -164,15 +167,24 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+          <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <preferredSize width="119" height="30"/>
         </properties>
       </component>
+      <grid id="7173b" binding="panelPrivilegios" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="0" column="2" row-span="8" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag top="3" left="3" bottom="3" right="10" weightx="0.1" weighty="0.0"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
       <grid id="7f7e9" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
