--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/ModificarPersonal.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/ModificarPersonal.form
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.personal.ModificarPersonal">
-  <grid id="27dc6" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="783" height="403"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="1300" height="700"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="b504d" binding="panel" layout-manager="GridBagLayout">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
+      <grid id="b504d" layout-manager="GridBagLayout">
+        <constraints border-constraint="West"/>
         <properties/>
         <border type="none"/>
         <children>
@@ -20,7 +19,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <preferredSize width="119" height="30"/>
@@ -89,10 +88,10 @@
               <text value="Rol"/>
             </properties>
           </component>
-          <grid id="e55df" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+          <grid id="e55df" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="11" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -114,20 +113,13 @@
               <component id="23630" class="javax.swing.JRadioButton" binding="noRadioButton" default-binding="true">
                 <constraints/>
                 <properties>
-                  <preferredSize width="41" height="21"/>
+                  <preferredSize width="50" height="21"/>
                   <text value="No"/>
                 </properties>
               </component>
             </children>
           </grid>
-          <component id="43e6f" class="javax.swing.JComboBox" binding="comboboxRol" custom-create="true">
-            <constraints>
-              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-          </component>
-          <grid id="3af35" layout-manager="FlowLayout" hgap="5" vgap="2" flow-align="1">
+          <grid id="3af35" layout-manager="FlowLayout" hgap="5" vgap="2" flow-align="0">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
@@ -144,7 +136,7 @@
               <component id="5f438" class="javax.swing.JFormattedTextField" binding="campoCedula" custom-create="true">
                 <constraints/>
                 <properties>
-                  <preferredSize width="99" height="30"/>
+                  <preferredSize width="159" height="30"/>
                 </properties>
               </component>
             </children>
@@ -154,7 +146,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
           </component>
@@ -163,7 +155,7 @@
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
           </component>
@@ -172,42 +164,12 @@
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <preferredSize width="119" height="30"/>
             </properties>
           </component>
-          <grid id="e2ba6" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-            <constraints>
-              <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="73383" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
-                <constraints/>
-                <properties>
-                  <preferredSize width="128" height="30"/>
-                  <text value="Cerrar"/>
-                </properties>
-              </component>
-              <component id="e2b06" class="javax.swing.JButton" binding="restablecerClaveButton" default-binding="true">
-                <constraints/>
-                <properties>
-                  <text value="Restablecer clave"/>
-                </properties>
-              </component>
-              <component id="9301b" class="javax.swing.JButton" binding="editarButton">
-                <constraints/>
-                <properties>
-                  <preferredSize width="128" height="30"/>
-                  <text value="Editar"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
           <component id="34ae7" class="javax.swing.JLabel">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -217,10 +179,10 @@
               <text value="¿Está activo?"/>
             </properties>
           </component>
-          <grid id="9c65" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+          <grid id="9c65" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <gridbag top="4" left="4" bottom="4" right="11" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -242,12 +204,52 @@
               <component id="2d656" class="javax.swing.JRadioButton" binding="inactivoRadioButton">
                 <constraints/>
                 <properties>
-                  <preferredSize width="41" height="21"/>
+                  <preferredSize width="50" height="21"/>
                   <text value="No"/>
                 </properties>
               </component>
             </children>
           </grid>
+          <component id="43e6f" class="javax.swing.JComboBox" binding="comboboxRol" custom-create="true">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="4" left="4" bottom="4" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <grid id="a0b13" binding="panelPrivilegios" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints border-constraint="East"/>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <grid id="e2ba6" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints border-constraint="South"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="73383" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <preferredSize width="128" height="30"/>
+              <text value="Cerrar"/>
+            </properties>
+          </component>
+          <component id="e2b06" class="javax.swing.JButton" binding="restablecerClaveButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Restablecer clave"/>
+            </properties>
+          </component>
+          <component id="9301b" class="javax.swing.JButton" binding="editarButton">
+            <constraints/>
+            <properties>
+              <preferredSize width="128" height="30"/>
+              <text value="Editar"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
